--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
   <body>
     <div id="login_form">
       <form action="login", method="POST">
-        Käyttäjätunnus
-        <input type="text", name="username", class="login_form_inputs"></input>
-        <p></p>
+        Käyttäjä-ID
+        <input type="text", name="user_id", class="login_form_inputs"></input>
+        <!-- <p></p>
         Salasana
         <input type="password" name="password", class="login_form_inputs"></input>
-        <p></p>
+        <p></p> -->
         <input type="submit" value="Kirjaudu", id="login_submit"></input>
       </form>
     </div>
