Login form centered

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-    <div id="login_form">
+    <center id="login_form">
       <form action="login", method="POST">
         Käyttäjä-ID
         <input type="text", name="user_id", class="login_form_inputs"></input>
@@ -16,7 +16,7 @@
         <p></p> -->
         <input type="submit" value="Kirjaudu", id="login_submit"></input>
       </form>
-    </div>
+    </center>
 
   </body>
 </html>
