--- a/static/master.css
+++ b/static/master.css
@@ -9,10 +9,10 @@ body {
   /* position: absolute; */
   color: #9daccb;
   margin: auto;
-  width: 10%;
-  /* height: 20%; */
+  width: 404px;
+  height: 115px;
 
-  padding-top: 150px;
+  padding-top: 10%;
   text-align: left;
   font-size: 32px;
 }
@@ -21,7 +21,13 @@ body {
   font-size: 24px;
   border: none;
   color: #9daccb;
+  background-color: #23356b;
+}
+
+#login_submit:hover {
   background-color: #1d2c4c;
+  transition: 0.4s;
+
 }
 
 .login_form_inputs {
